# platform.core.multimedia.tinycompress

./: CMakeLists.txt  project.config  tinycompress.pc.in
packaging/: tinycompress.changes  tinycompress.spec
